fixed bug in wrap

--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -1,43 +1,25 @@
 :host {
   display: block;
   background: var(--ea-background-2);
+  
 }
 
 .news-container {
-
   padding: 6em 0;
-  /*
- padding: 2.8em 0;
-  margin: 0 0 2.25em 0;
-  background: var(--ea-color-3);
-  */
+  color: rgb(250, 250, 250);
   h4 {
     color: gray;
     margin: 0.4em 2em;
     text-align: center;
   }
-  // @media only screen and (max-width: 600px) {
-  //   padding: 3em 4vw;
-  //   box-sizing: border-box;
-  //   & h4 {
-  //     margin-bottom: 2em;
-  //   }
-  // }
 }
 
 .news-icons {
-  /*
-  background: var(--ea-color-3);
-  height: 8em;
-  */
   margin: 2em 0 0 0;
   justify-items: center;
   align-items: center;
   grid-gap: 2.5em;
-  // @media only screen and (max-width: 750px) {
-  //   height: auto;
-  //   margin: 2em 0;
-  // }
+
   img {
     filter: grayscale(90%);
     opacity: 0.3;
